--- a/dataviser-grafana-panel-plugin/package.json
+++ b/dataviser-grafana-panel-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vungle-dataviser-panel-plugin",
   "version": "1.0.0",
-  "description": "",
+  "description": "Grafana panel plugin show ad details base on geo.",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
@@ -10,12 +10,13 @@
     "sign": "grafana-toolkit plugin:sign",
     "start": "yarn watch"
   },
-  "author": false,
+  "author": "DataViser Team",
   "license": "Apache-2.0",
   "devDependencies": {
     "@grafana/data": "latest",
     "@grafana/toolkit": "latest",
     "@grafana/ui": "latest",
+    "@types/react": "17.0.42",
     "emotion": "10.0.27"
   },
   "engines": {
