--- a/dataviser-grafana-panel-plugin/package.json
+++ b/dataviser-grafana-panel-plugin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vungle-dataviser-panel-plugin",
+  "name": "vungle-my-grafana-plugin",
   "version": "1.0.0",
-  "description": "Grafana panel plugin show ad details base on geo.",
+  "description": "demo",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
@@ -10,16 +10,31 @@
     "sign": "grafana-toolkit plugin:sign",
     "start": "yarn watch"
   },
-  "author": "DataViser Team",
+  "author": "HaibinZhang-Vungle",
   "license": "Apache-2.0",
   "devDependencies": {
     "@grafana/data": "latest",
     "@grafana/toolkit": "latest",
     "@grafana/ui": "latest",
-    "@types/react": "17.0.42",
     "emotion": "10.0.27"
   },
   "engines": {
     "node": ">=14"
+  },
+  "dependencies": {
+    "@antv/l7": "^2.9.6",
+    "@antv/l7-maps": "^2.9.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.41",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   }
 }
